--- a/PracMatlab01_Grupo3_B42781_B47769_B42481.tex
+++ b/PracMatlab01_Grupo3_B42781_B47769_B42481.tex
@@ -9,7 +9,7 @@
 \begin {document}
 
 \title{Laboratorio 1 MATLAB}
-\author{Daniel García Vaglio}
+\author{Daniel García Vaglio (B42781), Esteban Zamora (B47769), Ariel Fallas (B42481)}
 \maketitle
 
 \section{Ejercicio 3}
@@ -20,6 +20,7 @@ Para la primera parte de este ejercicio se pide implementar una función  que en
 \frac{dP(t)}{dt}=0,01kP(t)-0,00001aP(t)D(t)
 \label{eq:diferencial1}
 \end{equation}
+
 \begin{equation}
 \frac{dD(t)}{dt}=0,01mD(t)-0,0001bD(t)P(t)
 \label{eq:diferencial2}
@@ -72,34 +73,40 @@ end
 
 
 De la gráfica del resultado se obtiene la información de la tabla \ref{table:ejercicio31}
+\begin{table}
+\begin{tabular}{| c | c |}
+ Depredadores &  \\ 
+ valor mínimo &81.05 \\
+ valor máximo &8150\\
+ primer máximo&39.6\\
+ primer mínimo&110.9\\
+ periodo      &105.5\\
+ Presas       & \\
+ valor mínimo &11.46\\
+ valor máximo &606.8\\
+ primer máximo&29.93\\
+ primer mínimo&61.7\\
+ periodo      &105.47\\     
+\end{tabular}
+\end{table}
 
-Depredadores
-valor minimo |81.05
-valor maximo |8150
-primer maximo|39.6
-primer minimo|110.9
-periodo      |105.5
-Presas
-valor minimo |11.46
-valor maximo |606.8
-primer maximo|29.93
-primer minimo|61.7
-periodo      |105.47
-
-
-Depredadores
-valor minimo |19.02
-valor maximo |1.118e+04
-primer maximo|69.7
-primer minimo|157.5
-periodo      |123.3
-Presas
-valor minimo |3.623
-valor maximo |816.2
-primer maximo|60.87
-primer minimo|93.1
-periodo      |124.03
-
+\begin{table}
+\begin{tabular}{ c c }
+  \multicolumn{2}{|c|}{Depredadores} \\
+  Depredadores & \\
+  valor mínimo &19.02\\
+  valor máximo &1.118e+04\\
+  primer máximo&69.7\\
+  primer mínimo&157.5\\
+  periodo      &123.3\\
+  \multicolumn{2}{|c|}{Presas} \\
+  valor mínimo &3.623\\
+  valor máximo &816.2\\
+  primer máximo&60.87\\
+  primer mínimo&93.1\\
+  periodo      &124.03\\ 
+\end{tabular}
+\end{table}
 
 Note que la solución para los primeros valores iniciales propuestos las funciones tienen una oscilación menor; es decir, las poblaciones se mantienen más estables. Esta condición de estabilidad representa una mejor convivencia de las especies. Además en el segundo caso se tienen incrementos muy elevados de depredadores lo que indica una distribución no equitativa de las poblaciones. En conclusión el primer caso representa una mejor convivencia equitativa entre las especies.
 
