Formato a las tablas

--- a/Reporte/PracMatlab01_Grupo3_B42781_B47769_B42481.tex
+++ b/Reporte/PracMatlab01_Grupo3_B42781_B47769_B42481.tex
@@ -74,37 +74,52 @@ end
 
 De la gráfica del resultado se obtiene la información de la tabla \ref{table:ejercicio31}
 \begin{table}
-\begin{tabular}{| c | c |}
- Depredadores &  \\ 
- valor mínimo &81.05 \\
- valor máximo &8150\\
- primer máximo&39.6\\
- primer mínimo&110.9\\
- periodo      &105.5\\
- Presas       & \\
- valor mínimo &11.46\\
- valor máximo &606.8\\
- primer máximo&29.93\\
- primer mínimo&61.7\\
- periodo      &105.47\\     
+\caption{Datos primer caso de valores iniciales}
+\centering
+\begin{tabular}{| l | c |}
+  \hline
+ \multicolumn{2}{|c|}{Depredadores} \\
+ \hline
+ Valor mínimo &81.05 \\
+ Valor máximo &8150\\
+ Primer máximo&39.6\\
+ Primer mínimo&110.9\\
+ Periodo      &105.5\\
+ \hline
+ \multicolumn{2}{|c|}{Presas} \\
+ \hline
+ Valor mínimo &11.46\\
+ Valor máximo &606.8\\
+ Primer máximo&29.93\\
+ Primer mínimo&61.7\\
+ Periodo      &105.47\\
+ \hline
 \end{tabular}
 \end{table}
 
+
 \begin{table}
-\begin{tabular}{ c c }
+\caption{Datos segundo caso de valores iniciales}
+\centering
+\begin{tabular}{| l| c| }
+\hline
   \multicolumn{2}{|c|}{Depredadores} \\
+\hline
   Depredadores & \\
-  valor mínimo &19.02\\
-  valor máximo &1.118e+04\\
-  primer máximo&69.7\\
-  primer mínimo&157.5\\
-  periodo      &123.3\\
+  Valor mínimo &19.02\\
+  Valor máximo &1.118e+04\\
+  Primer máximo&69.7\\
+  Primer mínimo&157.5\\
+  Periodo      &123.3\\
+\hline
   \multicolumn{2}{|c|}{Presas} \\
-  valor mínimo &3.623\\
-  valor máximo &816.2\\
-  primer máximo&60.87\\
-  primer mínimo&93.1\\
-  periodo      &124.03\\ 
+\hline
+  Valor mínimo &3.623\\
+  Valor máximo &816.2\\
+  Primer máximo&60.87\\
+  Primer mínimo&93.1\\
+  Periodo      &124.03\\
+\hline 
 \end{tabular}
 \end{table}
 
