--- a/matlab_01/Reporte/PracMatlab01_Grupo3_B42781_B47769_B42481.tex
+++ b/matlab_01/Reporte/PracMatlab01_Grupo3_B42781_B47769_B42481.tex
@@ -1,10 +1,30 @@
-
-\documentclass {article}
+\documentclass[12pt,letterpaper]{article}
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
+\usepackage[activeacute,spanish]{babel}
+\usepackage[left=18mm,right=18mm,top=21mm,bottom=21mm,letterpaper]{geometry}%
+\usepackage{helvet}
+\usepackage{amsmath,amsfonts,amssymb,commath}
+\usepackage{graphicx}
+\usepackage{color}
+\usepackage{xcolor}
+\usepackage{verbatim}
+\usepackage{tabls}
+\usepackage[space]{grffile}
+\usepackage{url}
 \usepackage{listings}
-\usepackage[spanish]{babel}
-\usepackage [T1]{fontenc}
-\usepackage [utf8]{inputenc}
-\usepackage {graphicx}
+\usepackage{circuitikz}
+\usepackage{siunitx}
+
+\usepackage{textcomp}
+\usepackage{booktabs}
+\usepackage[colorlinks=true,urlcolor=blue,linkcolor=black,citecolor=black]{hyperref} 
+\usepackage{pdfpages}   %incluir paginas de pdf externo, para los anexos
+\usepackage{caption}
+\usepackage{subcaption}  
+\usepackage{rotating}
+\usepackage[section]{placeins}
+\usepackage{tikz}
 
 \begin {document}
 
@@ -26,55 +46,14 @@ Para la primera parte de este ejercicio se pide implementar una función  que en
 \label{eq:diferencial2}
 \end{equation}
 
-En el caso particular de este grupo el número de carné seleccionado es B47769, de manera que $m=9$ $k=7$ $a=4$ y $b=6$. Para resolver la ecuación diferencial se utiliza el siguiente código. Lo que se hace es primero asignar las constantes, luego se itera sobre el tiempo y en cada instante se aplica lo descrito por el método de Runge-Kutta. Al final del ciclo, se tiene una matris z con los valores qeu toma cada estado en cada instante descrito por el vector t. 
+En el caso particular de este grupo el número de carné seleccionado es B47769, de manera que $m=9$ $k=7$ $a=4$ y $b=6$. Para resolver la ecuación diferencial se utiliza el código presentado en la subsección de código. Lo que se hace es primero asignar las constantes, luego se itera sobre el tiempo y en cada instante se aplica lo descrito por el método de Runge-Kutta. Al final del ciclo, se tiene una matriz z con los valores que toma cada estado en cada instante descrito por el vector t. 
 
-\begin{lstlisting}
-%Primero se definen las constantes propuestas
-h=1/30;
-t=0:h:800;
-tamano=size(t);
-m=9;
-k=7;
-a=4;
-b=6;
-%Comentario de uso: 'Se descomenta el caso que se quiere analizar'
-p0=70*(m/b);
-d0=50*(k/a);
-%p0=10*(m/b);
-%d0=70*(k/a);
-%Se define la matriz inicial de estados, Note que se llena de valores, pero
-%esto no afecta pues son sustituidos luego.
-z=[1:tamano(2) ; 1:tamano(2)];
-z(:, 1)=[p0 d0];
-for i=1:tamano(2)-1
-    %Se calculan los k del metodo numerico propuesto
-    k1=derivadasEstados(t(i), z(:,i));
-    k2=derivadasEstados(t(i), z(:,i)+(h/2)*k1);
-    k3=derivadasEstados(t(i), z(:,i)+(h/2)*k2);
-    k4=derivadasEstados(t(i), z(:,i)+h*k3);
-    %se agrega este el nuevo valor a la matriz de estados
-    z(:,i+1)=z(:,i)+(h/6)*(k1+2*k2+2*k3+k4);
-end
-\end{lstlisting} 
-
-\begin{lstlisting}
-function [ derivadas ] = derivadasEstados( t, z )
-%Esta es la funcion que toma un tiempo t y el vector de estados z y calcula
-%   la derivada de los estados. Devuelve un vector con estas derivadas.
-%   Note que el tiempo no se utiliza, sin embargo en las instrucciones se
-%   pide qeu se acepte como entrada de la funcion.
-m=9;
-k=7;
-a=4;
-b=6;
-derivadas=[0.01*k*z(1)-0.00001*a*z(1)*z(2) ; -0.01*m*z(2)+0.0001*b*z(1)*z(2)];
-end
-\end{lstlisting}
+Se grafica el resultado (ver figura \ref{fig:ejercicio_3_caso_1}), y se obtiene la información de la tabla \ref{table:ejercicio31}. Luego se cambian las condiciones iniciales y se vuelve a simular el sistema (ver figura \ref{fig:ejercicio_3_caso_2}), y se obtiene la información de la tabla \ref{table:ejercicio32}.
 
 
-De la gráfica del resultado se obtiene la información de la tabla \ref{table:ejercicio31}
 \begin{table}
 \caption{Datos primer caso de valores iniciales}
+\label{table:ejercicio31}
 \centering
 \begin{tabular}{| l | c |}
   \hline
@@ -100,6 +79,7 @@ De la gráfica del resultado se obtiene la información de la tabla \ref{table:e
 
 \begin{table}
 \caption{Datos segundo caso de valores iniciales}
+\label{table:ejercicio32}
 \centering
 \begin{tabular}{| l| c| }
 \hline
@@ -123,14 +103,73 @@ De la gráfica del resultado se obtiene la información de la tabla \ref{table:e
 \end{tabular}
 \end{table}
 
+\begin{figure}
+	\centering
+	\begin{subfigure}[b]{0.36\textwidth}
+		\includegraphics[width=\textwidth]{pictures/ejercicio_3_caso_1}
+		\caption{Resultado para primer caso de entradas}
+		\label{fig:ejercicio_3_caso_1}
+	\end{subfigure}
+	\begin{subfigure}[b]{0.36\textwidth}
+		\includegraphics[width=\textwidth]{pictures/ejercicio_3_caso_2}
+		\caption{Resultado para segundo caso de entradas}
+		\label{fig:ejercicio_3_caso_2}
+	\end{subfigure}
+        \vfill
+        \begin{subfigure}[b]{0.36\textwidth}
+		\includegraphics[width=\textwidth]{pictures/ejercicio_3_extincion}
+		\caption{Resultado para extinción}
+		\label{fig:ejercicio_3_extincion}
+	\end{subfigure}
+	\caption{Gráficas Ejercicio 3}
+	\label{fig:graf_ejercicio_3}
+\end{figure}
+
+
 Note que la solución para los primeros valores iniciales propuestos las funciones tienen una oscilación menor; es decir, las poblaciones se mantienen más estables. Esta condición de estabilidad representa una mejor convivencia de las especies. Además en el segundo caso se tienen incrementos muy elevados de depredadores lo que indica una distribución no equitativa de las poblaciones. En conclusión el primer caso representa una mejor convivencia equitativa entre las especies.
 
-En general, la población de presas tiende a ser menor. También se puede notar que conforme desciende la cantidad inicial de presas mayor amplitud tiene el comportamiento de las poblaciones. Entonces se toma un caso extremo. Con 1000000 depredadores iniciales y 1 presa inicial. Cuando se simula el sistema, es evidente el descenso de ambas poblaciones. En particular se debe notar que la población de presas desciende a menos de 0,5. Como la cantidad de presas es entera, la condición descrita se refiere a 0 presas, lo que implica la extinción. 
+En general, la población de presas tiende a ser menor. También se puede notar que conforme desciende la cantidad inicial de presas mayor amplitud tiene el comportamiento de las poblaciones. Entonces se toma un caso extremo. Con 1000000 depredadores iniciales y 1 presa inicial. Cuando se simula el sistema (ver figura \ref{fig:ejercicio_3_extincion}), es evidente el descenso de ambas poblaciones. En particular se debe notar que la población de presas desciende a menos de 0,5. Como la cantidad de presas es entera, la condición descrita se refiere a 0 presas, lo que implica la extinción. 
+
+\subsection{Código del ejercicio 3}
+Script principal:
+\lstinputlisting[language=Matlab]{Ejercicio3.m}
+Función derivadaEstados
+\lstinputlisting[language=Matlab]{derivadasEstados.m}
+
 
 \section{Ejercicio 6}
 
-Se deben encontrar todas las soluciones reales, sin embargo no se puede analizar toda la recta numérica, y se debe tomar únicamente una porción. Para esto se calcularn los límites de la función en $-\infty$ y $\infty$
+Se deben encontrar todas las soluciones reales de la función \ref{eq:ecuacion_ejercicio_6}, sin embargo no se puede analizar toda la recta numérica, se debe tomar únicamente una porción. Para esto se calculan los límites de la función en $-\infty$ y $\infty$. 
 
-Para encontrar la solución de la ecuación, se procede a utilizar el método de la falsa posición. Sin embargo este método solamente sirve para encontrar una solución, entonces se hace una ligera adaptación, para poder encontrar todas las soluciones. 
+\begin{equation}
+y(x)=x^3+x^2+6x+55cos(x)-10xe^{0.2x}-x^2e^{-0.3x}
+\label{eq:ecuacion_ejercicio_6}
+\end{equation}
+
+Entonces:
+$\lim_{x\to\infty} y(x)=-\infty
+\lim_{x\to -\infty} y(x)=-\infty $
+
+Entonces se toma $x$ en el intervalo $[-5000, 5000]$. De la gráfica de la función (ver figura \ref{fig:ejercicio_6_grafica}), se nota que en este intervalo están todas las soluciones.
+
+Para encontrar la solución de la ecuación, se procede a utilizar el método de la falsa posición. Sin embargo este método solamente sirve para encontrar una solución, entonces se hace una ligera adaptación, para poder encontrar todas las soluciones. Se crea un vector x que toma valores desde $-5000$ hasta $5000$ en intervalos de $0.01$. Luego se calcula el vector y asociado, utilizando el criterio en (\ref{eq:ecuacion_ejercicio_6}). Se itera sobre cada entrada de y y se determina si entre esta entrada y la anterior hay un cambio de signo. Si no hay cambio de signo se pasa a la siguiente entrada, pero si sí lo hay, entonces se sabe que entre estos dos puntos existe una solución, entonces se utiliza el método de falsa posición entre estos dos puntos para econtrar las soluciones. 
+
+El método de la falsa posición es recursivo, entonces para esto se define una función recursiva que es llamada en el script principal. En esta función (solucionParticular) se implementa el método de falsa posición descrito en el folleto de análisis. Se reciben los puntos iniciales $(x_l, y_l)$ y $(x_u, y_u)$, si la multiplicación de ambos está lo suficientemente cerca de $0$ (menor a $0.0000001$), entonces se considera que es una solución. Si la multiplicación de ambos no es tan pequeña entonces se calcula el nuevo punto $(x_r, y_r)$, y se calcula solucionParticular entre $x_r$ y $x_l$ si entre ellos hay cambio de signo, o entre $x_r$ y $x_u$ si el cambio está entre estos. 
+
+En el script general, cada vez que se encuentra una solución, se agrega al final de un vector. Cada vez que se agrega una solución el vector crece, esto es porque a priori no se sabe la cantidad de soluciones, entonces se utiliza un vector de tamaño variable. Al final de iterar en cada entrada se obtienen las siguientes soluciones: -1.5206, 1.4455, 4.3645, 17.4701.
+
+\begin{figure}
+	\centering
+	\includegraphics[width=0.5\textwidth]{pictures/ejercicio_6_grafica}
+	\caption{Gráfica de la función en (\ref{eq:ecuacion_ejercicio_6})}
+	\label{fig:ejercicio_6_grafica}
+\end{figure} 
+
+\subsection{Código ejercicio 6}
+Script principal:
+\lstinputlisting[language=Matlab]{Ejercicio6.m}
+Función derivadaEstados
+\lstinputlisting[language=Matlab]{solucionParticular.m}
+
 
 \end{document}
