--- a/matlab_01/Reporte/PracMatlab01_Grupo3_B42781_B47769_B42481.tex
+++ b/matlab_01/Reporte/PracMatlab01_Grupo3_B42781_B47769_B42481.tex
@@ -16,6 +16,8 @@
 \usepackage{circuitikz}
 \usepackage{siunitx}
 
+\usepackage{matlab-prettifier}
+
 \usepackage{textcomp}
 \usepackage{booktabs}
 \usepackage[colorlinks=true,urlcolor=blue,linkcolor=black,citecolor=black]{hyperref} 
@@ -26,7 +28,7 @@
 \usepackage[section]{placeins}
 \usepackage{tikz}
 
-\begin {document}
+\begin{document}
 
 \title{Laboratorio 1 MATLAB}
 \author{Daniel García Vaglio (B42781), Esteban Zamora (B47769), Ariel Fallas (B42481)}
@@ -132,9 +134,9 @@ En general, la población de presas tiende a ser menor. También se puede notar 
 
 \subsection{Código del ejercicio 3}
 Script principal:
-\lstinputlisting[language=Matlab]{Ejercicio3.m}
+\lstinputlisting[style=Matlab-editor]{Ejercicio3.m}
 Función derivadaEstados
-\lstinputlisting[language=Matlab]{derivadasEstados.m}
+\lstinputlisting[style=Matlab-editor]{derivadasEstados.m}
 
 
 \section{Ejercicio 6}
@@ -167,9 +169,9 @@ En el script general, cada vez que se encuentra una solución, se agrega al fina
 
 \subsection{Código ejercicio 6}
 Script principal:
-\lstinputlisting[language=Matlab]{Ejercicio6.m}
+\lstinputlisting[style=Matlab-editor]{Ejercicio6.m}
 Función derivadaEstados
-\lstinputlisting[language=Matlab]{solucionParticular.m}
+\lstinputlisting[style=Matlab-editor]{solucionParticular.m}
 
 
 \end{document}
