--- a/matlab_01/Reporte/PracMatlab01_Grupo3_B42781_B47769_B42481.tex
+++ b/matlab_01/Reporte/PracMatlab01_Grupo3_B42781_B47769_B42481.tex
@@ -134,9 +134,9 @@ En general, la población de presas tiende a ser menor. También se puede notar 
 
 \subsection{Código del ejercicio 3}
 Script principal:
-\lstinputlisting[style=Matlab-editor]{Ejercicio3.m}
+\lstinputlisting[style=Matlab-editor, basicstyle=\mlttfamily]{Ejercicio3.m}
 Función derivadaEstados
-\lstinputlisting[style=Matlab-editor]{derivadasEstados.m}
+\lstinputlisting[style=Matlab-editor, basicstyle=\mlttfamily]{derivadasEstados.m}
 
 
 \section{Ejercicio 6}
@@ -169,9 +169,9 @@ En el script general, cada vez que se encuentra una solución, se agrega al fina
 
 \subsection{Código ejercicio 6}
 Script principal:
-\lstinputlisting[style=Matlab-editor]{Ejercicio6.m}
+\lstinputlisting[style=Matlab-editor, basicstyle=\mlttfamily]{Ejercicio6.m}
 Función derivadaEstados
-\lstinputlisting[style=Matlab-editor]{solucionParticular.m}
+\lstinputlisting[style=Matlab-editor, basicstyle=\mlttfamily]{solucionParticular.m}
 
 
 \end{document}
