--- a/matlab_01/Reporte/PracMatlab01_Grupo3_B42781_B47769_B42481.tex
+++ b/matlab_01/Reporte/PracMatlab01_Grupo3_B42781_B47769_B42481.tex
@@ -34,6 +34,26 @@
 \author{Daniel García Vaglio (B42781), Esteban Zamora (B47769), Ariel Fallas (B42481)}
 \maketitle
 
+\section{Ejercico 1}
+
+
+Para esta parte se generó un script el cual ejecuta los comandos en el orden solicitado, se pide graficar ciertas funciones ya dadas, todas dentro de una misma gráfica, esto es muy sencillo ya que lo único que se hace es definir las funciones y1 , y2 , .... , y12 . Los cuales dependen de las entradas definidas x1 , x2 , ...., x12 respectivamente. Y finalmente mediante la función ''plot()'' podemos generar la gráfica de ''y'' contra ''x'' .El único incoveniente que se tenía fue con la función y10 ya que estabagraficando únicamente un punto, ya que únicamente estaba recibiendo un valor, de esta forma matlab no detectaba que era un vector y por ello a la hora de graficarlo se denotó.  esto en código se ve así.
+Para lograr el color solicitado únicamente se debía especificar ''r (red)'' o ''y de (yellow)'' dentro de la función de plot como venía en la documentación de la función.
+
+\subsubsection{Código de ejercicio 1}
+
+
+Script principal:
+\lstinputlisting[style=Matlab-editor, basicstyle=\mlttfamily]{Ejercicio1.m}
+
+
+
+\section{Ejercicio 2}
+En esta sección se comenzó a explorar un poco más las funciones de matrices, ya que todos los objetos son formados a partir de matrices. Para esto se buscó la documentacion de algunas funciones necesarias como lo fue ''randi()'' el cual es un generador de números aleatorios enteros donde puedo especificar el tamaño de la matriz donde quiero que los genere y tambien el rango de valores entre los cuales deseo que vairíen los números generados.\\
+A continuación se calcularon los valores y vectores propios para la matriz A. Para obtener los valores propios aplicamos la función ''eig()'', esto genera una columna de valores propios. Sin embargo si lo colocamos en una matriz como para el caso de Vecprop, obtenemos un vector propio por cada columna de la matriz.\\
+Al igual que en el primer punto la matriz B se generó apartir de la función ''randi()''.
+
+
 \section{Ejercicio 3}
 
 Para la primera parte de este ejercicio se pide implementar una función  que encuentre el valor de de la derivada de los estados si se tiene un tiempo y los estados en ese tiempo dado. Esto se implementa en la función derivadasEstados, esta acepta el tiempo y el vector de estados en ese instante, y con esta información calcula la derivada de los estados en ese instante utilizando las ecuaciones (\ref{eq:diferencial1}) y (\ref{eq:diferencial2}). 
