--- a/matlab_01/Reporte/PracMatlab01_Grupo3_B42781_B47769_B42481.tex
+++ b/matlab_01/Reporte/PracMatlab01_Grupo3_B42781_B47769_B42481.tex
@@ -37,8 +37,8 @@
 \section{Ejercico 1}
 
 
-Para esta parte se generó un script el cual ejecuta los comandos en el orden solicitado, se pide graficar ciertas funciones ya dadas, todas dentro de una misma gráfica, esto es muy sencillo ya que lo único que se hace es definir las funciones y1 , y2 , .... , y12 . Los cuales dependen de las entradas definidas x1 , x2 , ...., x12 respectivamente. Y finalmente mediante la función ''plot()'' podemos generar la gráfica de ''y'' contra ''x'' .El único incoveniente que se tenía fue con la función y10 ya que estabagraficando únicamente un punto, ya que únicamente estaba recibiendo un valor, de esta forma matlab no detectaba que era un vector y por ello a la hora de graficarlo se denotó.  esto en código se ve así.
-Para lograr el color solicitado únicamente se debía especificar ''r (red)'' o ''y de (yellow)'' dentro de la función de plot como venía en la documentación de la función. La gráfica obtenida se muestra en la figura \ref{fig:batman}
+Para esta parte se generó un script el cual ejecuta los comandos en el orden solicitado, se pide graficar ciertas funciones ya dadas, todas dentro de una misma gráfica, esto es muy sencillo ya que lo único que se hace es definir las funciones y1 , y2 , .... , y12 . Los cuales dependen de las entradas definidas x1 , x2 , ...., x12 respectivamente. Y finalmente mediante la función ''plot()'' podemos generar la gráfica de ''y'' contra ''x'' .El único incoveniente que se tenía fue con la función y10 ya que estaba graficando únicamente un punto, pues únicamente estaba recibiendo un valor, de esta forma matlab no detectaba que era un vector y por ello a la hora de graficarlo se denotó que era una recta desde el punto -0.5 a 0.5. 
+Para lograr el color solicitado únicamente se debía especificar ''r (red)'' o ''y de (yellow)'' dentro de la función de plot como venía en la documentación de la función y con el comando hold, logramos que se graficaran todas en la misma figura. La gráfica obtenida se muestra en la figura \ref{fig:batman}
 
 \subsubsection{Código de ejercicio 1}
 
@@ -49,7 +49,7 @@ Script principal:
 
 \begin{figure}[ht!]
 	\centering
-	\includegraphics[width=0.6\textwidth]{pictures/Ejercicio1/batman_function.fig}
+	\includegraphics[width=0.6\textwidth]{pictures/Ejercicio1/batman_function.jpg}
 	\caption{Gráfica de las funciones generadas en una misma hoja}
 	\label{fig:batman}
 \end{figure} 
@@ -67,11 +67,16 @@ Finalmente en parte h, se estableció una matriz mágica, la cual se define como
 
 \begin{figure}[ht!]
 	\centering
-	\includegraphics[width=0.6\textwidth]{pictures/Ejercicio2/magic_matrix.fig}
+	\includegraphics[width=0.6\textwidth]{pictures/Ejercicio2/magic_matrix.jpg}
 	\caption{Gráfica de la matriz mágica M de el número de fila vs columna}
 	\label{fig:magical}
 \end{figure} 
 
+
+\subsection{Código de ejercicio 2}
+
+Script principal:
+\lstinputlisting[style=Matlab-editor, basicstyle=\mlttfamily]{Ejercicio2.m}
 
 
 \section{Ejercicio 3}
