Documento de avance y makefile

--- a/proyecto_final/reporte/Plantilla.tex
+++ b/proyecto_final/reporte/Plantilla.tex
@@ -23,7 +23,7 @@
 %nombre completo de los autores (* Por el usuario *)
 \autorA{Ariel Fallas Pizarro, B4 ...}
 \autorB{Daniel García Vaglio, B42781}
-\autorC{Esteban Zamora Alvarado, B4 ...}
+\autorC{Esteban Zamora Alvarado, B47769}
 
 %fecha de presentación (* si se deja en blanco indicará la fecha de la compilación)
 %\date{Mes de año}
