--- a/proyecto_final/reporte/informe_ref.bib
+++ b/proyecto_final/reporte/informe_ref.bib
@@ -53,6 +53,32 @@
   timestamp = {2008.05.01}
 }
 
+@MISC{fitzpatrick2011,
+   author = "Richard Fitzpatrick",
+   title = "{Generalized Coordinates}",
+   year = "2011",
+   url = "http://farside.ph.utexas.edu/teaching/336k/Newtonhtml/node75.html",
+   note = "Consultado 12 Mayo de 2016"
+}
+
+@MISC{vandiver2011,
+   author = "J. Vandiver",
+   title = "{An Introduction to Lagrange Equations}",
+   year = "2011",
+   url = "http://ocw.mit.edu/courses/mechanical-engineering/2-003sc-engineering-dynamics-fall-2011/lagrange-equations/MIT2_003SCF11_Lagrange.pdf",
+   note = "Consultado 13 Mayo de 2016"
+}
+
+@MISC{gavin2014,
+   author = "Henri Gavin",
+   title = "{Generalized Coordinates, Lagrange's Equations, and Constraints}",
+   year = "2014",
+   url = "http://people.duke.edu/~hpgavin/cee541/LagrangesEqns.pdf",
+   note = "Consultado 13 Mayo de 2016"
+}
+
+
+
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
