Agregar referencias al .bib

--- a/proyecto_final/reporte/informe_ref.bib
+++ b/proyecto_final/reporte/informe_ref.bib
@@ -77,6 +77,80 @@
    note = "Consultado 13 Mayo de 2016"
 }
 
+@ARTICLE{Felix_Grasser,
+  author = {Grasser F. , D'arrigo A., Colombi S. y Rufer A},
+  title = {JOE: a Mobile, Inverted Pendulum},
+  journal = {Industrial Electronics},
+  year = {2002},
+  volume = {49},
+  pages = {107-114},
+  owner = {Felix Grasser},
+  timestamp = {2002.01.02}
+}
+
+@ARTICLE{Coelho,
+  author = {Coelho V., Liew S., Stol K. y Liu G},
+  title = {Development of a Mobile Two-Wheel Balancing Platform for Autonomous Applications },
+  journal = {Mechatronics and Machine Vision in Practice },
+  year = {2008 },
+  volume = {15 },
+  owner = {Coelho },
+  timestamp = {2008.2.12 }
+}
+
+@ARTICLE{Yan-Hou,
+  author = {Yan-Hou W., Yu-Sheng L. y Tih-Guang L.},
+  title = {Design and Implementation of the Balance of Two-Wheeled Robots },
+  journal = {Advanced Robotics and Intelligent Systems },
+  year = {2013 },
+  pages = {130-134}
+  owner = {Yan-Hou },
+  timestamp = {2013.2.6 }
+}
+
+@ARTICLE{Sayidmarie,
+  author = {Sayidmarie O., Tokhi M., Almeshal A., Agouri S. },
+  title = {Design and Real-time Implementation Of a Fuzzy Logic Control System For a Two-Wheeled Robot},
+  journal = {Methods and Models in Automation and Robotics},
+  year = {2012},
+  volume = {17},
+  pages = {569-572},
+  owner = {Sayidmarie},
+  timestamp = {2012.08.30}
+}
+
+@ARTICLE{Xu,
+  author = {Xu J., Guo Z., Lee t. },
+  title = {Design and Implementation of Integral Sliding-Mode Control on an Underactuated Two-wheeled Mobile Robot},
+  journal = {Transactions on Industrial Electronics},
+  year = {2014},
+  volume = {61},
+  pages = {3671-3681},
+  owner = {Xu},
+  timestamp = {2014.07.07}
+}
+
+@ARTICLE{Ha,
+  author = {Ha Y., Yuta S. },
+  title = {Trajectory Tracking Control for Navigation of Self-Contained Mobile Inverse Pendulum},
+  journal = {Intelligent Robots and Systems},
+  year = {1994},
+  volume = {3},
+  pages = {1875-1882},
+  owner = {Ha},
+  timestamp = {1994.16.09}
+}
+
+@ARTICLE{KarlStol,
+  author = {Stol K., Man R., Halkyard R.},
+  title = {Review of modelling and control of two-wheeled robots},
+  journal = {Annual Reviews in Control},
+  year = {2013},
+  volume = {37},
+  pages = {89-103},
+  owner = {Stol},
+  timestamp = {2013.03.04}
+}
 
 
 @comment{jabref-meta: selector_publisher:}
