--- a/proyecto_final/reporte/informe_ref.bib
+++ b/proyecto_final/reporte/informe_ref.bib
@@ -94,7 +94,7 @@
   journal = {Mechatronics and Machine Vision in Practice },
   year = {2008 },
   volume = {15 },
-  owner = {Coelho },
+  owner = {Coelho},
   timestamp = {2008.2.12 }
 }
 
@@ -103,8 +103,8 @@
   title = {Design and Implementation of the Balance of Two-Wheeled Robots },
   journal = {Advanced Robotics and Intelligent Systems },
   year = {2013 },
-  pages = {130-134}
-  owner = {Yan-Hou },
+  pages = {130-134},
+  owner = {YanHou},
   timestamp = {2013.2.6 }
 }
 
